[package]
name = "pot-docs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22",features = ["json"] }
serde_json = "1.0.108"
actix-web = "4.4.0"
chrono = "0.4.31"
md5 = "0.7.0"
