[package]
name = "pot-docs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["sqlite","runtime-tokio"] }
tokio = { version = "1.33.0", features = ["rt","rt-multi-thread"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.108"
actix-web = "4.4.0"
futures = "0.3.29"
chrono = "0.4.31"
dirs = "5.0.1"
md5 = "0.7.0"
